adjusted Tests for Translator